[tool.poetry]
name = "pyxtream"
version = "0.7.2"
description = "xtream IPTV loader"
authors = ["Claudio Olmi <superolmo2@gmail.com>"]
license = "GPL3"
readme = "README.md"
homepage = "https://github.com/superolmo/pyxtream"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English"
]

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.32.3"
jsonschema = "^4.23.0"
flask = {version = "^3.1.0", optional = true}

[tool.poetry.group.dev.dependencies]
pdoc = "^15.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
