[project]
name = "pyxtream"
version = "0.7.3"
requires-python = ">=3.9"
description = "xtream IPTV loader"
authors = [{name = "Claudio Olmi", email = "<superolmo2@gmail.com>"}]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/superolmo/pyxtream"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English"
]
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
]

[project.optional-dependencies]
flask = ["flask>=3.1.0,<4.0.0"]

[tool.poetry.group.dev.dependencies]
pdoc = "^15.0.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
